split date into day and hours

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
         <li>
             <h2>Prévisions</h2>
-            <p class="date"></p>
+            <p class="jour"></p>
+            <p class="heure"></p>
             <p class="description"></p>
             <p class="pIcon">
                 <img src="" alt="" class="imageIcon">
