add local date and CSS li

--- a/index.html
+++ b/index.html
@@ -16,24 +16,26 @@
 
         <li>
             <h2>Prévisions</h2>
-            <p class="jour"></p>
+           
+            <span>Date : </span><p class="jour"></p>
             <p class="heure"></p>
-            <p class="description"></p>
+
+            <span>Temps : </span><p class="description"></p>
             <p class="pIcon">
                 <img src="" alt="" class="imageIcon">
             </p>
-            <p class="temperature"></p>
-            <p class="humidite"></p>
+            <span>Température : </span><p class="temperature"></p>
+            <span> Humidité : </span><p class="humidite"></p>
         </li>
 
 
 
     </template>
     <main>
-        <h1>Meteo</h1>
+        <h1>Météo</h1>
         <!-- ul est le point d'injection -->
         <ul id="weatherOutput">
-            <p>C'est ici : </p>
+            
 
 
         </ul>
